Bug 56591 - Missing space
Summary: Missing space
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.8.0
: P5 trivial
Target Milestone: 4.8.0
Assignee: Not yet assigned to anyone
URL:
Keywords: diagnostic
Depends on:
Blocks:
 
Reported: 2013-03-10 18:06 UTC by Roland Stigge
Modified: 2013-03-11 19:01 UTC (History)
2 users (show)

See Also:
Host:
Target: avr
Build:
Known to work:
Known to fail:
Last reconfirmed: 2013-03-11 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Stigge 2013-03-10 18:06:37 UTC
gcc/config/avr/avr.c:2234:"Unsupported code '%c'for fixed-point:"
Comment 1 Georg-Johann Lay 2013-03-11 18:45:08 UTC
Please supply informations and test case following the bug reporting instructions
http://gcc.gnu.org/bugs/#report
Comment 2 Andrew Pinski 2013-03-11 18:47:27 UTC
There is an obvious space missing:
        output_operand_lossage ("Unsupported code '%c'for fixed-point:",
                                code);
Comment 3 Georg-Johann Lay 2013-03-11 18:57:35 UTC
Author: gjl
Date: Mon Mar 11 18:57:27 2013
New Revision: 196604

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=196604
Log:
	PR target/56591
	* config/avr/avr.c (avr_print_operand): Add space after '%c' in
	output_operand_lossage message.
	


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/avr/avr.c
Comment 4 Georg-Johann Lay 2013-03-11 19:01:27 UTC
Fixed.